--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Carrousel 3D intéractif - Creative Coding </title>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/addons/p5.sound.min.js"></script>
 </head>
 
 <body>
@@ -12,6 +12,7 @@
   <script src="libraries/p5.min.js"></script>
   <script src="libraries/p5.dom.min.js"></script>
   <script src="libraries/p5.sound.min.js"></script>
+  
 
   <!-- SKETCH -->
   <script src="sketch.js"></script>
